@@ -1,5 +1,11 @@
 2007-07-27  Denis Washington  <denisw@svn.gnome.org>
 
+	* Makefile.am:
+	Don't try to install mouse-cursor-*.png as these files are not in mouse/
+	anymore.
+
+2007-07-27  Denis Washington  <denisw@svn.gnome.org>
+
 	* cursor-*.pcf:
 	* mouse-cursor-*.png:
 	Moved to ../appearance/data/.
